--- a/css/pages/common.css
+++ b/css/pages/common.css
@@ -7,11 +7,10 @@
 
 :root {
     /* Declaro variables CSS con colores principales */
-    --color-theme: #00594c;
+    --color-theme: rgb(0,89,76) ;
     --color-active: #5df2d6;
     --color-back-active: #04957d;
-    --color-gradient: linear-gradient(to right, var(--color-theme),
-    var(--color-back-active));
+    --color-theme: linear-gradient(90deg, rgba(0,89,76,1) 0%, rgba(0,89,76,1) 35%, rgba(4,149,125,1) 100%);
     }
 body {
     height: 100%;
@@ -31,12 +30,17 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
+    height: 100px;
     background: var(--color-theme);
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom: 2px solid #5df2d6;
     }
 nav>ul {
     display: flex;
     justify-content: space-between;
     justify-content: center;
+    margin-top: 10px;
     }
 nav li {
     flex: 0 0 auto;
@@ -65,6 +69,11 @@ main{
     height: calc(100% - 120px);
 }
 
+img.redimension{
+    height: 35px;
+    width: 35px;
+}
+
 h1{
     text-align: center;
     margin: 0;
@@ -77,7 +86,7 @@ h1>img{
 }
 
 h2{
-    color: var(--color-theme);
+    color: rgb(0,89,76);
     margin: 0;
     text-align: center;
 }
@@ -100,6 +109,7 @@ footer {
     text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
+    border-top: 2px solid #5df2d6;
 }
 
 footer p {
